removed animation changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a href='#/'><h1>MEGA64<br />ARCHIVES</h1></a>
   </div>
   <div id='view-animate-container'>
-    <div class='view-animate' ng-view ng-class='{left: left, right: !left}'></div>
+    <div class='view-animate' ng-view></div>
   </div>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular.min.js"></script>
