--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en" ng-app="Mega64" class="no-js">
+<html lang="en" scroll ng-app="Mega64" class="no-js">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
