--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Mega64 Archives</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <link rel="stylesheet" href="font/press-start-k.css"/>
-  <link rel="stylesheet" href="css/app.css"/>
+  <link rel="stylesheet" href="//mega64archives.github.io/font/press-start-k.css"/>
+  <link rel="stylesheet" href="//mega64archives.github.io/css/app.css"/>
 </head>
 <body>
   <div class='title'>
